--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "elib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.1",
     "eslint": "^9.20.1",
     "globals": "^15.14.0",
@@ -17,5 +21,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   }
 }
